# ClashRoyaleBuildABot

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  ClashRoyaleBuildABot.spec  LICENSE.md  README.md  constants.py  main.py  ocr.py  pyproject.toml  requirements-dev.txt  requirements.txt  screen.py  setup.cfg  setup.py  token.txt
.github/workflows/: build.yml  lint.yml  pypi-package.yml
clashroyalebuildabot/: __init__.py  config.yaml  constants.py  debugger.py  emulator.py  screen.py  updater.py  visualizer.py
clashroyalebuildabot/actions/: __init__.py  action.py  archers_action.py  arrows_action.py  baby_dragon_action.py  bats_action.py  cannon_action.py  fireball_action.py  giant_action.py  goblin_barrel_action.py  hungry_dragon_action.py  knight_action.py  minions_action.py  minipekka_action.py  musketeer_action.py  overhead_action.py  spell_action.py  witch_action.py  zap_action.py
clashroyalebuildabot/actions/generic/: action.py  bridge_action.py  defense_action.py  king_action.py  overhead_action.py  spell_action.py
clashroyalebuildabot/bot/: __init__.py  action.py  bot.py
clashroyalebuildabot/bot/example/: custom_action.py  custom_bot.py  messages.py
clashroyalebuildabot/bot/pete/: __init__.py  pete_action.py  pete_bot.py
clashroyalebuildabot/bot/random/: __init__.py  random_bot.py
clashroyalebuildabot/bot/standard/: __init__.py  standard_action.py  standard_bot.py
clashroyalebuildabot/bot/two_six_hog_cycle/: __init__.py  messages.py  two_six_hog_cycle_action.py  two_six_hog_cycle_bot.py
clashroyalebuildabot/bot_stats/: battle_log.csv  chart_utils.py
clashroyalebuildabot/data/: __init__.py  cards.csv  cards.py  constants.py  units.py
clashroyalebuildabot/detectors/: __init__.py  card_detector.py  detector.py  number_detector.py  onnx_detector.py  screen_detector.py  side_detector.py  unit_detector.py
clashroyalebuildabot/emulator/: __init__.py  adbblitz.py  emulator.py
clashroyalebuildabot/gui/: animations.py  gameplay_widget.py  gui.py  layout_setup.py  log_handler.py  main_window.py  new_gui.py  stats_window.py  styles.py  utils.py
clashroyalebuildabot/models/: side.onnx
clashroyalebuildabot/namespaces/: __init__.py  cards.py  numbers.py  screens.py  state.py  units.py
clashroyalebuildabot/state/: __init__.py  card_detector.py  debugger.py  detector.py  error_handler.py  number_detector.py  onnx_detector.py  screen_detector.py  side_detector.py  unit_detector.py  updater.py
clashroyalebuildabot/utils/: error_handling.py  git_utils.py  logger.py
error_handling/: __init__.py  wikify_error.py
example/: custom_action.py  custom_bot.py  main.py  random_bot.py  windows_main.py
gui/: gameplay_widget.py  layout_setup.py  main_window.py  stats_window.py  utils.py
src/: bot.py  constants.py  main.py  ocr.py  random_bot.py  screen.py
src/bot/: action.py  bot.py  pete_bot.py  random_bot.py
src/bot/TwoSixHogCycle/: TwoSixHogCycle.py  TwoSixHogCycleAction.py
src/bot/pete/: pete_action.py  pete_bot.py
src/bot/random/: random_bot.py
src/bot/standard/: standard_action.py  standard_bot.py
src/data/: cards.csv  constants.py
src/ocr/: non_max_suppression.py  ocr.py
src/state/: card_detector.py  detector.py  hp_detector.py  number_detector.py  number_detector_2.py  onnx_detector.py  screen_detector.py  unit_detector.py
