[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ClashRoyaleBuildABot"
version = "0.1.0"
authors = [
  {name = "pbatch"},
]
description = "A platform for creating bots to play Clash Royale"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "flatbuffers>=2.0",
    "numpy>=1.23.5,<2",
    "onnxruntime-gpu>=1.18.0",
    "Pillow>=10.1.0",
    "protobuf>=3.20.3",
    "scipy>=1.13.1",
    "rich>=13.7.1",
    "loguru>=0.7.2",
    "PyYAML",
    "pybind11>=2.12",
    "requests>=2.25.1",
    "av",
    "get_free_port"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.5.0",
    "black==24.4.0",
    "flake8==7.0.0",
    "isort==5.13.2",
    "pylint==3.1.0",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
)/
'''

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
skip_glob = ["venv/*"]
